--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,26 @@
+aniso8601==8.0.0
 certifi==2019.11.28
 chardet==3.0.4
+Click==7.0
+Flask==1.1.1
+Flask-RESTful==0.3.7
 idna==2.8
+itsdangerous==1.1.0
+Jinja2==2.10.3
+joblib==0.14.1
 kaggle==1.5.6
+MarkupSafe==1.1.1
 numpy==1.18.0
 pandas==0.25.3
 python-dateutil==2.8.1
 python-slugify==4.0.0
 pytz==2019.3
 requests==2.22.0
+scikit-learn==0.22
+scipy==1.4.1
 six==1.13.0
+sklearn==0.0
 text-unidecode==1.3
 tqdm==4.41.0
 urllib3==1.24.3
+Werkzeug==0.16.0
